--- a/src/theme/theming.css
+++ b/src/theme/theming.css
@@ -73,6 +73,12 @@ ion-item-group {
 }
 
 ion-item-divider {
+  --background: var(--sf-primary-color);
+  --color: white;
+  font-size: 1.5rem;
+}
+
+ion-segment-button::part(indicator-background) {
   background: var(--sf-primary-color);
 }
 
