--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -31,6 +31,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-text-color: white;
 
   --sf-primary-color: #ff733c;
+  --background-checked: var(--sf-primary-color);
 }
 
 h1,
