--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -62,3 +62,8 @@ a:hover {
   color: white;
   text-decoration: none;
 }
+
+a.color {
+  color: var(--sf-primary-color);
+  text-decoration: underline;
+}
