--- a/src/theme/theming.css
+++ b/src/theme/theming.css
@@ -21,7 +21,7 @@
   padding-top: 10px;
 
   font-family: "brico-condensed", sans-serif;
-  font-size: 3.6rem;
+  font-size: 3.2rem;
   text-align: right;
   font-optical-sizing: auto;
   font-variation-settings: "wdth" 90.6;
@@ -127,4 +127,15 @@ ion-list {
 ion-list.list-md,
 ion-list.list-ios {
   margin-bottom: 100px;
+}
+
+.description-content {
+  height: 70px;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -moz-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  line-clamp: 4;
+  box-orient: vertical;
+  overflow: hidden;
 }
